--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
     <label for="streams">Streams per Month</label>
     <input type="number" id="streams" value="8" />
 
-    <div class="results">
-      <p><strong>Buyers per Stream:</strong> <span id="buyers">15</span></p>
-      <p><strong>Revenue per Stream:</strong> $<span id=<h1>👋 Hello World!</h1>
+  <div class="results">
+  <p><strong>Buyers per Stream:</strong> <span id="buyers">15</span></p>
+  <p><strong>Revenue per Stream:</strong> $<span id="revenue">0</span></p>
+</div>
 <!-- partial -->
   <script  src="./script.js"></script>
 
