--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Streamer Revenue Calculator by Megamod</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -69,12 +59,45 @@
     <label for="streams">Streams per Month</label>
     <input type="number" id="streams" value="8" />
 
-  <div class="results">
-  <p><strong>Buyers per Stream:</strong> <span id="buyers">15</span></p>
-  <p><strong>Revenue per Stream:</strong> $<span id="revenue">0</span></p>
-</div>
-<!-- partial -->
-  <script  src="./script.js"></script>
+    <div class="results">
+      <p><strong>Buyers per Stream:</strong> <span id="buyers">15</span></p>
+      <p><strong>Revenue per Stream:</strong> $<span id="revenue">150</span></p>
+      <p><strong>Streamer Profit (70%):</strong> $<span id="streamerProfit">105</span></p>
+      <p><strong>Megamod Share (30%):</strong> $<span id="megamodProfit">45</span></p>
+      <hr>
+      <p><strong>Monthly Revenue:</strong> $<span id="monthlyRevenue">1200</span></p>
+      <p><strong>Streamer Monthly Profit:</strong> $<span id="monthlyStreamer">840</span></p>
+      <p><strong>Megamod Monthly Share:</strong> $<span id="monthlyMegamod">360</span></p>
+    </div>
+  </div>
 
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const inputs = document.querySelectorAll('input');
+      inputs.forEach(input => input.addEventListener('input', calculate));
+      calculate();
+    });
+
+    function calculate() {
+      const viewers = parseInt(document.getElementById('viewers').value) || 0;
+      const conversion = parseFloat(document.getElementById('conversion').value) || 0;
+      const price = parseFloat(document.getElementById('price').value) || 0;
+      const streams = parseInt(document.getElementById('streams').value) || 0;
+
+      const buyers = Math.round(viewers * (conversion / 100));
+      const revenue = buyers * price;
+      const streamerProfit = revenue * 0.7;
+      const megamodProfit = revenue * 0.3;
+
+      document.getElementById('buyers').innerText = buyers;
+      document.getElementById('revenue').innerText = revenue.toFixed(2);
+      document.getElementById('streamerProfit').innerText = streamerProfit.toFixed(2);
+      document.getElementById('megamodProfit').innerText = megamodProfit.toFixed(2);
+
+      document.getElementById('monthlyRevenue').innerText = (revenue * streams).toFixed(2);
+      document.getElementById('monthlyStreamer').innerText = (streamerProfit * streams).toFixed(2);
+      document.getElementById('monthlyMegamod').innerText = (megamodProfit * streams).toFixed(2);
+    }
+  </script>
 </body>
 </html>
